--- a/definitions.html
+++ b/definitions.html
@@ -25,130 +25,348 @@
     <div class="content-container">
       <h1>Digital Marketing Definitions</h1>
       <div class="definition-container">
-        <h2>Cost Per Click (CPC):</h2>
-        <p>Total cost divided by the number of clicks on an ad.</p>
+        <h3>CTR (Click-Through Rate):</h3>
+        <p>Formula: (Number of Clicks / Number of Impressions) x 100</p>
+        <ul>
+          <li>
+            <p>CTR measures the effectiveness of an online advertising campaign by calculating the percentage of users
+              who
+              click on an ad after seeing it.</p>
+          </li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Cost per action (CPA):</h2>
-        <p>Amount paid to acquire a new customer, lead, or other action. Calculated as the Total Cost divided by number
-          of
-          actions.</p>
+        <h3>Conversion Rate:</h3>
+        <p>Formula: (Number of Conversions / Number of Clicks) x 100</p>
+        <ul>
+          <li>
+            <p>Conversion Rate is the percentage of users who take a desired action (e.g., make a purchase) after
+              clicking on an ad or visiting a webpage.</p>
+          </li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Cost per thousand impressions (CPM):</h2>
-        <p>The average cost per thousand impressions, calculated as the Total Cost/Thousands of Impressions.
-          (Cost/Impression)*1000</p>
+        <h3>ROI (Return on Investment):</h3>
+        <p>Formula: [(Net Profit - Cost of Investment) / Cost of Investment] x 100</p>
+        <ul>
+          <li>
+            <p>ROI measures a marketing campaign's profitability, considering the campaign's cost and the revenue
+              generated.</p>
+          </li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Cost per valuable impressions (CPVM):</h2>
-        <p>Impressions that are viewable, verified non-fraudulent, within a specific frequency range and delivered to
-          the
-          intended target audience.</p>
+        <h3>CPA (Cost Per Acquisition):</h3>
+        <p>Formula: Total Cost / Number of Acquisitions</p>
+        <ul>
+          <li>
+            <p>CPA calculates the cost of acquiring a new customer through a specific marketing campaign.</p>
+          </li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Viewability</h2>
-        <p>A metric created by the Internet Advertising Bureau (IAB) used to measure how viewable an ad actually is when
-          it's served..</p>
+        <h3>CPC (Cost Per Click):</h3>
+        <p>Formula: Total Cost of Campaign / Total Number of Clicks</p>
+        <ul>
+          <li>
+            <p>CPC represents the cost of each click in a pay-per-click advertising campaign.</p>
+          </li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Audience Targeting:</h2>
-        <p>A method that enables advertisers to show an ad specifically to visitors based on their shared behavioral,
-          demographic, geographic and/or technographic attributes.</p>
+        <h3>CPM (Cost Per Million):</h3>
+        <p>Formula: Total Cost of Campaign / (Number of Impressions / 1,000)</p>
+        <ul>
+          <li>
+            <p>CPM is the cost per one thousand impressions in a display advertising campaign.</p>
+          </li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Behavioral Targeting:</h2>
-        <p>Using previous online user activity (e.g. pages visited, content viewed, searches, clicks, and purchases)
-          often
-          through the use of 3rd party data providers to generate a segment that is used to match advertising creative
-          to
-          users.</p>
+        <h3>ROAS (Return on Ad Spend):</h3>
+        <p>Formula: (Revenue from Ad Campaign / Cost of Ad Campaign)</p>
+        <ul>
+          <li>
+            <p>ROAS measures the effectiveness of an advertising campaign by calculating the revenue generated for every
+              dollar spent on advertising.</p>
+          </li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Remarketing</h2>
-        <p>A tactic that targets those individuals who have already visited a site with ads based on what is already
-          known
-          about them.</p>
+        <h3>LTV (Customer Lifetime Value):</h3>
+        <p>Formula: Average Purchase Value x Average Purchase Frequency x Average Customer Lifespan</p>
+        <ul>
+          <li>
+            <p>LTV estimates the long-term value a customer will bring to a business over their entire relationship.</p>
+          </li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Frequency Capping:</h2>
-        <p>The limit of how many times a given ad will be shown to a unique cookie during a session or within a
-          specified
-          time period.</p>
+        <h3>Bounce Rate:</h3>
+        <p>Formula: (Number of Single Page Visits / Total Visits) x 100</p>
+        <ul>
+          <li>
+            <p>Bounce Rate measures the percentage of visitors who leave a website after viewing only one page.</p>
+          </li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Dayparting:</h2>
-        <p>A method that enables advertisers to show an ad specifically to visitors only on certain days of the week or
-          times of the day.</p>
+        <h3>CPL (Cost Per Lead):</h3>
+        <p>Formula: Total Cost of Campaign / Number of Leads Acquired</p>
+        <ul>
+          <li>
+            <p>CPL measures the cost of acquiring a new lead through a marketing campaign.</p>
+          </li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2></h2>
-        <p></p>
+        <h3>CPS (Cost Per Sale):</h3>
+        <p>Formula: Total Cost of Campaign / Number of Sales Generated</p>
+        <ul>
+          <li>
+            <p>CPS calculates the cost of acquiring a new sale through a marketing campaign.</p>
+          </li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Open Auction</h2>
-        <p>We saw an example of a programmatic media buy made via open auction in the walk through featuring Emily.
-          Bidders compete for inventory and users from thousands of sites in a 2nd price real time auction.
-          In a 2nd price, aka Vickrey auction, the highest bidder wins but the price paid is the second-highest bid.
-        </p>
+        <h3>Email Open Rate:</h3>
+        <p>Formula: (Number of Emails Opened / Number of Emails Sent) x 100</p>
+        <ul>
+          <li>
+            <p>Email Open Rate calculates the percentage of recipients who opened an email.</p>
+          </li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Private Auction:</h2>
-        <p>A by-invitation-only, real time marketplace comprised of handpicked sites/placements</p>
+        <h3>Customer Churn Rate:</h3>
+        <p>Formula: (Number of Customers at the Start of Period - Number of Customers at the End of Period) / Number of
+          Customers at the Start of Period</p>
+        <ul>
+          <li>
+            <p>Churn Rate calculates the percentage of customers who stopped using a product or service during a
+              specified
+              time period.</p>
+          </li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Segments:</h2>
-        <p>A set of users who share one or more similar attributes. Also referred to as a data segment or audience. </p>
+        <h3>Quality Score:</h3>
+        <ul>
+          <li>A metric used by search engines like Google to assess the quality and relevance of keywords and ads in a
+            PPC
+            campaign, which can impact ad placement and costs.</li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Predictive Analysis:</h2>
-        <p>Powerful analytic engine that encompasses various statistical and data mining techniques to make
-          predictions/forecasts about future</p>
+        <h3>Impression:</h3>
+        <ul>
+          <li>The total number of times an ad has been served.</li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Real-time bidding (RTB)</h2>
-        <p>An automated process which allows media buyers to evaluate, bid on and purchase ad inventory in real time on
-          an
-          impression-by impression basis.</p>
+        <h3>Impression Share:</h3>
+        <ul>
+          <li>Impression share measures the percentage of total available ad impressions that your ads received in a
+            given
+            campaign, indicating how well you're reaching your audience.</li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Ad Server:</h2>
-        <p>A technology that places ads on websites and provides a variety of specialized services for publishers and
-          advertisers, including tracking the number of impressions and clicks delivered by a campaign, blocking ads
-          from
-          serving on specific sites (blocklist) and selecting the ads that will yield a publisher or advertiser the
-          highest value.</p>
+        <h3>Ad Rank:</h3>
+        <ul>
+          <li>Ad Rank is a metric used in paid search advertising to determine the position of your ad in the search
+            engine
+            results page. It is calculated based on your bid, ad quality, and ad extensions.</li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Ad Tag:</h2>
-        <p>An ad-tag is a snippet of HTML, typically composed of JavaScript or an IFRAME that tells a browser to request
-          some content from an ad server.</p>
+        <h3>Frequency Capping:</h3>
+        <ul>
+          <li>Frequency capping is a strategy in advertising that limits the number of times a user is shown a
+            particular ad
+            within a defined time frame to prevent ad fatigue.</li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Impression:</h2>
-        <p>The total number of times an ad has been served.</p>
+        <h3>Affiliate Marketing:</h3>
+        <ul>
+          <li>A performance-based marketing strategy where businesses reward affiliates for each visitor or customer
+            brought
+            through the affiliate's marketing efforts.</li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Ad Exchange:</h2>
-        <p>Technology platforms used to buy and sell online ad impressions on an auction basis.</p>
+        <h3>Attribution Models:</h3>
+        <ul>
+          <li>Attribution models are methods used to assign value to different touchpoints in the customer journey to
+            understand which marketing channels and interactions contribute to conversions.</li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Demand Side Platform (DSP):</h2>
-        <p>Trading or bid execution technology for buyers to manage ad exchanges, networks, and SSPs.</p>
+        <h3>Viewability:</h3>
+        <ul>
+          <li>A metric created by the Internet Advertising Bureau (IAB) used to measure how viewable an ad actually is
+            when
+            it's served.</li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Data Providers:</h2>
-        <p>Third party vendors who provide a holistic view of consumers. These rich user attributes are then used for
-          both
-          targeting and campaign analytics...</p>
+        <h3>Audience Targeting:</h3>
+        <ul>
+          <li>A method that enables advertisers to show an ad specifically to visitors based on their shared behavioral,
+            demographic, geographic and/or technographic attributes.</li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Sell Side platform (SSP):</h2>
-        <p>SSPs provide outsourced media selling and ad network management services for publishers.</p>
+        <h3>Behavioral Targeting:</h3>
+        <ul>
+          <li>Using previous online user activity (e.g., pages visited, content viewed, searches, clicks, and purchases)
+            often through the use of 3rd party data providers to generate a segment that is used to match advertising
+            creative to users.</li>
+        </ul>
       </div>
+
       <div class="definition-container">
-        <h2>Data Management Platform (DMP):</h2>
-        <p>A centralized system for gathering first-party data, integrating with 3rd party data, user-level performance
-          data and applying this data to one's advertising strategy.</p>
+        <h3>Remarketing:</h3>
+        <ul>
+          <li>A tactic that targets those individuals who have already visited a site with ads based on what is already
+            known about them.</li>
+        </ul>
+      </div>
+
+      <div class="definition-container">
+        <h3>Frequency Capping: </h3>
+        <ul>
+          <li>The limit of how many times a given ad will be shown to a unique cookie during a session or within a specified time period.</li>
+        </ul>
+      </div>
+
+      <div class="definition-container">
+        <h3>Dayparting:</h3>
+        <ul>
+          <li>A method that enables advertisers to show an ad specifically to visitors only on certain days of the week
+            or
+            times of the day.</li>
+        </ul>
+      </div>
+
+      <div class="definition-container">
+        <h3>Programmatic Advertising:</h3>
+        <ul>
+          <li>Automated, data-driven ad buying.</li>
+        </ul>
+      </div>
+
+      <div class="definition-container">
+        <h3>Private Auction:</h3>
+        <ul>
+          <li>A by-invitation-only, real-time marketplace comprised of handpicked sites/placements.</li>
+        </ul>
+      </div>
+
+      <div class="definition-container">
+        <h3>Segments:</h3>
+        <ul>
+          <li>A set of users who share one or more similar attributes. Also referred to as a data segment or audience.
+          </li>
+        </ul>
+      </div>
+
+      <div class="definition-container">
+        <h3>Predictive Analysis:</h3>
+        <ul>
+          <li>Powerful analytic engine that encompasses various statistical and data mining techniques to make
+            predictions/forecasts about the future.</li>
+        </ul>
+      </div>
+
+      <div class="definition-container">
+        <h3>Real-time Bidding (RTB):</h3>
+        <ul>
+          <li>An automated process that allows media buyers to evaluate, bid on, and purchase ad inventory in real-time
+            on
+            an impression-by-impression basis.</li>
+        </ul>
+      </div>
+
+      <div class="definition-container">
+        <h3>Ad Server:</h3>
+        <ul>
+          <li>A technology that places ads on websites and provides a variety of specialized services for publishers and
+            advertisers, including tracking the number of impressions and clicks delivered by a campaign, blocking ads
+            from serving on specific sites (blocklist) and selecting the ads that will yield a publisher or advertiser
+            the
+            highest value.</li>
+        </ul>
+      </div>
+
+      <div class="definition-container">
+        <h3>Ad Tag:</h3>
+        <ul>
+          <li>An ad tag is a snippet of HTML, typically composed of JavaScript or an IFRAME that tells a browser to
+            request
+            some content from an ad server.</li>
+        </ul>
+      </div>
+
+      <div class="definition-container">
+        <h3>Ad Exchange:</h3>
+        <ul>
+          <li>Technology platforms are used to buy and sell online ad impressions on an auction basis.</li>
+        </ul>
+      </div>
+
+      <div class="definition-container">
+        <h3>Demand Side Platform (DSP):</h3>
+        <ul>
+          <li>Trading or bid execution technology for buyers to manage ad exchanges, networks, and SSPs.</li>
+        </ul>
+      </div>
+
+      <div class="definition-container">
+        <h3>Data Providers:</h3>
+        <ul>
+          <li>Third-party vendors who provide a holistic view of consumers. These rich user attributes are then used for
+            both targeting and campaign analytics.</li>
+        </ul>
+      </div>
+
+      <div class="definition-container">
+        <h3>Sell Side Platform (SSP):</h3>
+        <ul>
+          <li>SSPs provide outsourced media selling and ad network management services for publishers.</li>
+        </ul>
+      </div>
+
+      <div class="definition-container">
+        <h3>Data Management Platform (DMP):</h3>
+        <ul>
+          <li>A centralized system for gathering first-party data, integrating with 3rd party data, user-level
+            performance
+            data, and applying this data to one's advertising strategy.</li>
+        </ul>
       </div>
     </div>
   </main>
