broke up general definitions from formulas

--- a/definitions.html
+++ b/definitions.html
@@ -23,7 +23,76 @@
   </nav>
   <main>
     <div class="content-container">
-      <h1>Digital Marketing Definitions</h1>
+      <h1>Formula Definitions:</h1>
+      <div class="formula-definitions">
+        <h3>Bounce Rate:</h3>
+        <ul>
+          <li>(Number of Single Page Visits / Total Visits) x 100</li>
+        </ul>
+
+        <h3>CPA (Cost Per Acquisition):</h3>
+        <ul>
+          <li>Total Cost / Number of Acquisitions</li>
+        </ul>
+
+        <h3>CPC (Cost Per Click):</h3>
+        <ul>
+          <li>Total Cost of Campaign / Total Number of Clicks</li>
+        </ul>
+
+        <h3>CPL (Cost Per Lead):</h3>
+        <ul>
+          <li>Total Cost of Campaign / Number of Leads Acquired</li>
+        </ul>
+
+        <h3>CPS (Cost Per Sale):</h3>
+        <ul>
+          <li>Total Cost of Campaign / Number of Sales Generated</li>
+        </ul>
+
+        <h3>CPM (Cost Per Million):</h3>
+        <ul>
+          <li>Total Cost of Campaign / (Number of Impressions / 1,000)</li>
+        </ul>
+
+        <h3>CPM (Cost Per Million):</h3>
+        <ul>
+          <li>Total Cost of Campaign / (Number of Impressions / 1,000)</li>
+        </ul>
+
+        <h3>CTR (Click-Through Rate):</h3>
+        <ul>
+          <li>(Number of Clicks / Number of Impressions) x 100</li>
+        </ul>
+
+        <h3>Customer Churn Rate:</h3>
+        <ul>
+          <li>(Number of Customers at the Start of Period - Number of Customers at the End of Period) / Number
+            of
+            Customers at the Start of Period</li>
+        </ul>
+
+        <h3>LTV (Customer Lifetime Value):</h3>
+        <ul>
+          <li>Average Purchase Value x Average Purchase Frequency x Average Customer Lifespan</li>
+        </ul>
+
+        <h3>Return on Ad Spend (ROAS):</h3>
+        <ul>
+          <li>(Revenue from Ad Campaign / Cost of Ad Campaign)</li>
+        </ul>
+
+        <h3>Return on Ad Spend (ROAS):</h3>
+        <ul>
+          <li>(Revenue from Ad Campaign / Cost of Ad Campaign)</li>
+        </ul>
+
+        <h3>Return on Investment (ROI):</h3>
+        <ul>
+          <li>[(Net Profit - Cost of Investment) / Cost of Investment] x 100</li>
+        </ul>
+      </div>
+      <h1>General Definitions:</h1>
       <div class="definition-container">
         <h3>Ad Exchange:</h3>
         <ul>
@@ -96,7 +165,6 @@
 
       <div class="definition-container">
         <h3>Bounce Rate:</h3>
-        <h4>- Formula: (Number of Single Page Visits / Total Visits) x 100</h4>
         <ul>
           <li>
             <p>Bounce Rate measures the percentage of visitors who leave a website after viewing only one page.</p>
@@ -106,7 +174,6 @@
 
       <div class="definition-container">
         <h3>CPA (Cost Per Acquisition):</h3>
-        <h4>- Formula: Total Cost / Number of Acquisitions</h4>
         <ul>
           <li>
             <p>CPA calculates the cost of acquiring a new customer through a specific marketing campaign.</p>
@@ -116,7 +183,6 @@
 
       <div class="definition-container">
         <h3>CPC (Cost Per Click):</h3>
-        <h4>- Formula: Total Cost of Campaign / Total Number of Clicks</h4>
         <ul>
           <li>
             <p>CPC represents the cost of each click in a pay-per-click advertising campaign.</p>
@@ -126,7 +192,6 @@
 
       <div class="definition-container">
         <h3>CPL (Cost Per Lead):</h3>
-        <h4>- Formula: Total Cost of Campaign / Number of Leads Acquired</h4>
         <ul>
           <li>
             <p>CPL measures the cost of acquiring a new lead through a marketing campaign.</p>
@@ -136,7 +201,6 @@
 
       <div class="definition-container">
         <h3>CPS (Cost Per Sale):</h3>
-        <h4>- Formula: Total Cost of Campaign / Number of Sales Generated</h4>
         <ul>
           <li>
             <p>CPS calculates the cost of acquiring a new sale through a marketing campaign.</p>
@@ -146,7 +210,6 @@
 
       <div class="definition-container">
         <h3>CPM (Cost Per Million):</h3>
-        <h4>- Formula: Total Cost of Campaign / (Number of Impressions / 1,000)</h4>
         <ul>
           <li>
             <p>CPM is the cost per one thousand impressions in a display advertising campaign.</p>
@@ -156,7 +219,6 @@
 
       <div class="definition-container">
         <h3>CTR (Click-Through Rate):</h3>
-        <h4>- Formula: (Number of Clicks / Number of Impressions) x 100</h4>
         <ul>
           <li>
             <p>CTR measures the effectiveness of an online advertising campaign by calculating the percentage of users
@@ -168,9 +230,6 @@
 
       <div class="definition-container">
         <h3>Customer Churn Rate:</h3>
-        <h4>- Formula: (Number of Customers at the Start of Period - Number of Customers at the End of Period) / Number
-          of
-          Customers at the Start of Period</h4>
         <ul>
           <li>
             <p>Churn Rate calculates the percentage of customers who stopped using a product or service during a
@@ -240,7 +299,6 @@
 
       <div class="definition-container">
         <h3>LTV (Customer Lifetime Value):</h3>
-        <h4>- Formula: Average Purchase Value x Average Purchase Frequency x Average Customer Lifespan</h4>
         <ul>
           <li>
             <p>LTV estimates the long-term value a customer will bring to a business over their entire relationship.</p>
@@ -298,7 +356,6 @@
 
       <div class="definition-container">
         <h3>Return on Ad Spend (ROAS):</h3>
-        <h4>- Formula: (Revenue from Ad Campaign / Cost of Ad Campaign)</h4>
         <ul>
           <li>
             <p>ROAS measures the effectiveness of an advertising campaign by calculating the revenue generated for every
@@ -309,7 +366,6 @@
 
       <div class="definition-container">
         <h3>Return on Investment (ROI):</h3>
-        <h4>- Formula: [(Net Profit - Cost of Investment) / Cost of Investment] x 100</h4>
         <ul>
           <li>
             <p>ROI measures a marketing campaign's profitability, considering the campaign's cost and the revenue
