put definitions with the formulas

--- a/definitions.html
+++ b/definitions.html
@@ -27,69 +27,76 @@
       <div class="formula-definitions">
         <h3>Bounce Rate:</h3>
         <ul>
-          <li>(Number of Single Page Visits / Total Visits) x 100</li>
+          <li>Bounce Rate measures the percentage of visitors who leave a website after viewing only one page.</li>
+          <p>- (Number of Single Page Visits / Total Visits) x 100</p>
         </ul>
 
         <h3>CPA (Cost Per Acquisition):</h3>
         <ul>
-          <li>Total Cost / Number of Acquisitions</li>
+          <li>CPA calculates the cost of acquiring a new customer through a specific marketing campaign.</li>
+          <p>- Total Cost / Number of Acquisitions</p>
         </ul>
 
         <h3>CPC (Cost Per Click):</h3>
         <ul>
-          <li>Total Cost of Campaign / Total Number of Clicks</li>
+          <li>CPC represents the cost of each click in a pay-per-click advertising campaign.</li>
+          <p>- Total Cost of Campaign / Total Number of Clicks</p>
         </ul>
 
         <h3>CPL (Cost Per Lead):</h3>
         <ul>
-          <li>Total Cost of Campaign / Number of Leads Acquired</li>
+          <li>CPL measures the cost of acquiring a new lead through a marketing campaign.</li>
+          <p>- Total Cost of Campaign / Number of Leads Acquired</p>
         </ul>
 
         <h3>CPS (Cost Per Sale):</h3>
         <ul>
-          <li>Total Cost of Campaign / Number of Sales Generated</li>
+          <li>CPS calculates the cost of acquiring a new sale through a marketing campaign.</li>
+          <p>- Total Cost of Campaign / Number of Sales Generated</p>
         </ul>
 
         <h3>CPM (Cost Per Million):</h3>
         <ul>
-          <li>Total Cost of Campaign / (Number of Impressions / 1,000)</li>
-        </ul>
-
-        <h3>CPM (Cost Per Million):</h3>
-        <ul>
-          <li>Total Cost of Campaign / (Number of Impressions / 1,000)</li>
+          <li>CPM is the cost per one thousand impressions in a display advertising campaign.</li>
+          <p>- Total Cost of Campaign / (Number of Impressions / 1,000)</p>
         </ul>
 
         <h3>CTR (Click-Through Rate):</h3>
         <ul>
-          <li>(Number of Clicks / Number of Impressions) x 100</li>
+          <li>CTR measures the effectiveness of an online advertising campaign by calculating the percentage of users
+            who
+            click on an ad after seeing it.</li>
+          <p>- (Number of Clicks / Number of Impressions) x 100</p>
         </ul>
 
         <h3>Customer Churn Rate:</h3>
         <ul>
-          <li>(Number of Customers at the Start of Period - Number of Customers at the End of Period) / Number
+          <li>Churn Rate calculates the percentage of customers who stopped using a product or service during a
+            specified
+            time period.</li>
+          <p>- (Number of Customers at the Start of Period - Number of Customers at the End of Period) / Number
             of
-            Customers at the Start of Period</li>
+            Customers at the Start of Period</p>
         </ul>
 
         <h3>LTV (Customer Lifetime Value):</h3>
         <ul>
-          <li>Average Purchase Value x Average Purchase Frequency x Average Customer Lifespan</li>
+          <li>LTV estimates the long-term value a customer will bring to a business over their entire relationship.</li>
+          <p>- Average Purchase Value x Average Purchase Frequency x Average Customer Lifespan</p>
         </ul>
 
         <h3>Return on Ad Spend (ROAS):</h3>
         <ul>
-          <li>(Revenue from Ad Campaign / Cost of Ad Campaign)</li>
-        </ul>
-
-        <h3>Return on Ad Spend (ROAS):</h3>
-        <ul>
-          <li>(Revenue from Ad Campaign / Cost of Ad Campaign)</li>
+          <li>ROAS measures the effectiveness of an advertising campaign by calculating the revenue generated for every
+            dollar spent on advertising.</li>
+          <p>- (Revenue from Ad Campaign / Cost of Ad Campaign)</p>
         </ul>
 
         <h3>Return on Investment (ROI):</h3>
         <ul>
-          <li>[(Net Profit - Cost of Investment) / Cost of Investment] x 100</li>
+          <li>ROI measures a marketing campaign's profitability, considering the campaign's cost and the revenue
+            generated.</li>
+          <p>- [(Net Profit - Cost of Investment) / Cost of Investment] x 100</p>
         </ul>
       </div>
       <h1>General Definitions:</h1>
@@ -160,82 +167,6 @@
           <li>Using previous online user activity (e.g., pages visited, content viewed, searches, clicks, and purchases)
             often through the use of 3rd party data providers to generate a segment that is used to match advertising
             creative to users.</li>
-        </ul>
-      </div>
-
-      <div class="definition-container">
-        <h3>Bounce Rate:</h3>
-        <ul>
-          <li>
-            <p>Bounce Rate measures the percentage of visitors who leave a website after viewing only one page.</p>
-          </li>
-        </ul>
-      </div>
-
-      <div class="definition-container">
-        <h3>CPA (Cost Per Acquisition):</h3>
-        <ul>
-          <li>
-            <p>CPA calculates the cost of acquiring a new customer through a specific marketing campaign.</p>
-          </li>
-        </ul>
-      </div>
-
-      <div class="definition-container">
-        <h3>CPC (Cost Per Click):</h3>
-        <ul>
-          <li>
-            <p>CPC represents the cost of each click in a pay-per-click advertising campaign.</p>
-          </li>
-        </ul>
-      </div>
-
-      <div class="definition-container">
-        <h3>CPL (Cost Per Lead):</h3>
-        <ul>
-          <li>
-            <p>CPL measures the cost of acquiring a new lead through a marketing campaign.</p>
-          </li>
-        </ul>
-      </div>
-
-      <div class="definition-container">
-        <h3>CPS (Cost Per Sale):</h3>
-        <ul>
-          <li>
-            <p>CPS calculates the cost of acquiring a new sale through a marketing campaign.</p>
-          </li>
-        </ul>
-      </div>
-
-      <div class="definition-container">
-        <h3>CPM (Cost Per Million):</h3>
-        <ul>
-          <li>
-            <p>CPM is the cost per one thousand impressions in a display advertising campaign.</p>
-          </li>
-        </ul>
-      </div>
-
-      <div class="definition-container">
-        <h3>CTR (Click-Through Rate):</h3>
-        <ul>
-          <li>
-            <p>CTR measures the effectiveness of an online advertising campaign by calculating the percentage of users
-              who
-              click on an ad after seeing it.</p>
-          </li>
-        </ul>
-      </div>
-
-      <div class="definition-container">
-        <h3>Customer Churn Rate:</h3>
-        <ul>
-          <li>
-            <p>Churn Rate calculates the percentage of customers who stopped using a product or service during a
-              specified
-              time period.</p>
-          </li>
         </ul>
       </div>
 
@@ -351,26 +282,6 @@
         <ul>
           <li>A tactic that targets those individuals who have already visited a site with ads based on what is already
             known about them.</li>
-        </ul>
-      </div>
-
-      <div class="definition-container">
-        <h3>Return on Ad Spend (ROAS):</h3>
-        <ul>
-          <li>
-            <p>ROAS measures the effectiveness of an advertising campaign by calculating the revenue generated for every
-              dollar spent on advertising.</p>
-          </li>
-        </ul>
-      </div>
-
-      <div class="definition-container">
-        <h3>Return on Investment (ROI):</h3>
-        <ul>
-          <li>
-            <p>ROI measures a marketing campaign's profitability, considering the campaign's cost and the revenue
-              generated.</p>
-          </li>
         </ul>
       </div>
 
